# financial-risk-analytics-engine

./: .env.example  .gitignore  README.md  alembic.ini  design doc  prd.md  pyproject.toml  pytest.ini  requirements.txt  run.sh  sample_data.csv  tech stack  test_data_upload.py
config/: settings.py
docs/: DATABASE.md  TASK_1_VERIFICATION.md  TASK_2_VERIFICATION.md  TASK_3_VERIFICATION.md
migrations/: env.py
scripts/: test_upload.py
src/: __init__.py  database.py  db_init.py  main.py  models.py  schemas.py  schemas_data.py  security.py
src/middleware/: __init__.py  rbac.py
src/options/: README.md  app.py  black_scholes.py  implied_vol.py  monte_carlo.py  requirements.txt  test_modules.py
src/routes/: __init__.py  auth.py  data.py
src/schemas/: data.py
src/services/: auth.py  data.py
